--- a/index.css
+++ b/index.css
@@ -1,43 +1,62 @@
-.grey{
-    width: 7000px;
-    height: 700px;
-    background-color: #e3e4e6;
+.all{
     display: flex;
-    align-items: center;
+    flex-direction: column;
+}
+.top{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    justify-content: space-evenly;
+}
+.grey{
+    display: flex;
     font-size: 20px;
     color: #aeafb1;
 }
 .bruh{
     font-size: 100px;
-    z-index: 2;
-    position: absolute;
-    width: 150px;
-    height: 350px;
-    top: 10px;
-    left: 10px;
-    color: #303a47;
+    z-index: 7;
+    top: 70px;
+    color: #303846;
 }
 .image{
   z-index: 5;
   position: absolute;
-  top: 10px;
-  left: 1000px;
+  top: 300px;
+  left: 600px;
 }
-.image2{  
+.image2{
   z-index: 10;
   position: absolute;
   top: 500px;
   left: 70px;
 }
-.heading{
+.right{
     display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 1000px;
+}
+.left20{
+    width: 800px;
+    height: 800px;
+    background-color: #e3e4e6;
+    display: flex;
+    justify-content: left;
+}
+.right20{
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
-.right{
-    
+.icon{
+    max-width: 50px;
 }
-.right{
-    width: 50%;
+.container{
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
+}
+.ico{
+    max-width: 50px;
 }
